fixed bottom linkbar on mobile breakpoinnt

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -257,7 +257,7 @@
     margin: 7.5px 0;
   }
   #bottombar .quicklinks {
-    width: 20vw;
+    width: 22vw;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -267,7 +267,7 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    font-size: 5vw;
+    font-size: 4.5vw;
   }
   .active-app {
     color: rgba(255, 0, 0, 0.5);
