--- a/static/scss/_partials/_portrait-mobile.scss
+++ b/static/scss/_partials/_portrait-mobile.scss
@@ -301,11 +301,11 @@
     }
 
     #bottombar .quicklinks {
-        width: 20vw;
+        width: 22vw;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 5vw;
+        font-size: 4.5vw;
     }
 
     .active-app {
